crates/aptos-enum-conversion-derive/tests/cases/no_fields.rs
// Copyright © Aptos Foundation

use aptos_enum_conversion_derive::EnumConversion;

#[derive(EnumConversion)]
enum Messages {
    Test
}

fn main() {

}
